[tool.poetry]
name = "lstable"
version = "0.1.0"
description = ""
authors = ["Taher Jalal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
mpmath = "^1.3.0"
tqdm ="^4.65.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
